--- a/index.html
+++ b/index.html
@@ -7,10 +7,22 @@
     <title>Blog</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js" defer></script>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Post do Blog</h1>
-    <p id="loading">Carregando...</p>
-    <div id="posts-container"></div>
+    <div class="body_box">
+        <h1>Post do Blog</h1>
+        <p id="loading">Carregando...</p>
+        <div id="posts-container"></div>
+    </div>
+    <div class="pagination">
+        <div class="first">primeiro</div>
+        <div class="prev">anterior</div>
+        <div class="numbers">
+            <div></div>    
+        </div>
+        <div class="next">próximo</div>
+        <div class="last">última</div>
+    </div>
 </body>
 </html>
